tests/fixtures/invalid/invalid_duration_size.avsc
{
  "type": "record",
  "name": "BadDurationSize",
  "fields": [
    {
      "name": "elapsed",
      "type": {
        "type": "fixed",
        "name": "BadDuration",
        "size": 16,
        "logicalType": "duration"
      }
    }
  ]
}
